@@ -8,6 +8,11 @@
 - Added function ~closql-reload~, which, given a potentially outdated
   object, returns an up-to-date object.
 
+- Replaced the slot property ~:closql-columns~ with ~:closql-table~.  The
+  value has to be a table instead of a vector of columns and its name
+  can be different from that of the slot, which previously was not
+  possible.  The slots are now determined by quering the database.
+
 * v0.6.0    2018/07/01
 
 - Added new ~closql-object~ class slot ~closql-order-by~, which allows
